Fix cross-processing between quotes and confessions